<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, TipCalculator!</string>
    <string name="app_name">TipCalculator</string>
    <string name="bill_total">Bill Total</string>
    <string name="zero_str">0.00</string>
    <string name="ten_percent">10%</string>
    <string name="fiften_percent">15%</string>
    <string name="twenty_percent">20%</string>
    <string name="tip">Tip</string>
    <string name="total">Total</string>
    <string name="custom">Custom</string>
    <string name="eighteen_percent">18%</string>

</resources>