<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tableLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:padding="5dp" 
    android:background="#ffffff" 
    android:stretchColumns="1, 2, 3">
	
    <!--  tablerow 1 -->
    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/billTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bill_total" android:gravity="right" android:paddingRight="5dp"/>

        <EditText
            android:id="@+id/billEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="3"
            android:text="@string/zero_str" 
            android:textColor="#000" 
            android:textSize="14sp" 
            android:inputType="numberDecimal"
            android:layout_span="3">

            <requestFocus />
        </EditText>

    </TableRow>
	<!--  tablerow 2 -->
    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tip10TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ten_percent" 
            android:layout_column="1" android:gravity="center"/>

        <TextView
            android:id="@+id/tip15TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fiften_percent" android:gravity="center"/>

        <TextView
            android:id="@+id/tip20TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/twenty_percent" android:gravity="center"/>

    </TableRow>

	<!--  tablerow 3 -->
    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tipTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip" android:gravity="right" android:paddingRight="5dp"/>

        <EditText
            android:id="@+id/total10EditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="3"
            android:text="@string/zero_str" 
            android:textColor="#000" 
            android:gravity="center" 
            android:textSize="14sp"
            android:inputType="numberDecimal" android:focusable="false" android:longClickable="false" android:cursorVisible="false" android:layout_weight="1"/>

        <EditText
            android:id="@+id/total15EditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="3"
            android:text="@string/zero_str" 
            android:textColor="#000" 
            android:gravity="center" 
            android:textSize="14sp" 
            android:inputType="numberDecimal" android:focusable="false" android:longClickable="false" android:cursorVisible="false" android:layout_weight="1"/>

        <EditText
            android:id="@+id/total20EditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="3"
            android:text="@string/zero_str" 
            android:textColor="#000" 
            android:gravity="center" 
            android:textSize="14sp" 
            android:inputType="numberDecimal" android:focusable="false" android:longClickable="false" android:cursorVisible="false" android:layout_weight="1"/>

    </TableRow>

    <!--  tablerow 4 -->
    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/totalTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total" android:gravity="right" android:paddingRight="5dp"/>

        <EditText
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="3"
            android:text="@string/zero_str" android:textColor="#000" android:gravity="center" android:textSize="14sp" android:inputType="numberDecimal" android:focusable="false" android:longClickable="false" android:cursorVisible="false" android:layout_weight="1"/>

        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="3"
            android:text="@string/zero_str" 
            android:textColor="#000" 
            android:gravity="center" 
            android:textSize="14sp" 
            android:inputType="numberDecimal" android:focusable="false" android:longClickable="false" android:cursorVisible="false" android:layout_weight="1"/>

        <EditText
            android:id="@+id/editText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="3"
            android:text="@string/zero_str" 
            android:textColor="#000" 
            android:gravity="center" 
            android:textSize="14sp"
            android:inputType="numberDecimal" android:focusable="false" android:longClickable="false" android:cursorVisible="false" android:layout_weight="1"/>

    </TableRow>
	
	<!--  tablerow 5 -->
    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/customTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/custom" android:gravity="right|center_vertical" android:paddingRight="5dp" android:paddingBottom="5dp"/>

        <SeekBar
            android:id="@+id/customSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:layout_span="2" android:progress="18" android:paddingLeft="8dp" android:paddingRight="8dp" android:paddingBottom="5dp" android:focusable="false" android:layout_weight="1"/>

        <TextView
            android:id="@+id/customTipTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/eighteen_percent" android:gravity="center_vertical" android:paddingBottom="5dp" android:paddingLeft="5dp" android:layout_weight="1"/>

    </TableRow>

	<!--  tablerow 6 -->
    <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tipCustomTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip" android:gravity="right" android:paddingRight="5dp"/>

        <EditText
            android:id="@+id/tipCustomEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="3"
            android:text="@string/zero_str" 
            android:textColor="#000" 
            android:gravity="center" 
            android:textSize="14sp"
            android:inputType="numberDecimal" android:focusable="false" android:longClickable="false" android:cursorVisible="false" android:layout_weight="1"/>

        <TextView
            android:id="@+id/totalCustomTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total" android:gravity="right" android:paddingRight="5dp" android:layout_weight="1"/>

        <EditText
            android:id="@+id/totalCustomEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="3"
            android:text="@string/zero_str" 
            android:textColor="#000" 
            android:gravity="center" 
            android:textSize="14sp"
            android:inputType="numberDecimal" android:focusable="false" android:longClickable="false" android:cursorVisible="false" android:layout_weight="1"/>

    </TableRow>

</TableLayout>